add meta verification tag

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/dead_star.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="This is my personal portfolio, where I show my projects and skills as a web developer." />
-
+    <meta name="google-site-verification" content="ZIhuYHvHwk_6fpzlWMELen0SRbhyeaTHx4CdEUWh98Q" />
+    
     <title>Portafolio web</title>
   </head>
   <body>
