--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="This is my personal portfolio, where I show my projects and skills as a web developer." />
     <meta name="google-site-verification" content="ZIhuYHvHwk_6fpzlWMELen0SRbhyeaTHx4CdEUWh98Q" />
+    <link rel="canonical" href="https://starkiller-portfolio.vercel.app/" />
+    <meta property="og:title" content="Portafolio web" />
+    <meta property="og:description" content="This is my personal portfolio, where I show my projects and skills as a web developer." />
+    <meta property="og:image" content="https://starkiller-portfolio.vercel.app/dead_star.svg" />
+    <meta property="og:url" content="https://starkiller-portfolio.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <meta name="site_name" content="Portafolio web" />
+    <meta name="author" content="Starkiller" />
     
+
     <title>Portafolio web</title>
   </head>
   <body>
