--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="canonical" href="https://starkiller-portfolio.vercel.app/" />
     <meta property="og:title" content="Portafolio web" />
     <meta property="og:description" content="This is my personal portfolio, where I show my projects and skills as a web developer." />
-    <meta property="og:image" content="https://starkiller-portfolio.vercel.app/dead_star.svg" />
+    <meta property="og:image" content="https://starkiller-portfolio.vercel.app/dead_star.png" />
     <meta property="og:url" content="https://starkiller-portfolio.vercel.app/" />
     <meta property="og:type" content="website" />
     <meta name="site_name" content="Portafolio web" />
-    <meta name="author" content="Starkiller" />
+    <meta name="author" content="S74RK1113R" />
     
 
-    <title>Portafolio web</title>
+    <title>S74RK1113R portfolio</title>
   </head>
   <body>
     <div id="root" ></div>
