--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:title" content="Portafolio web" />
     <meta property="og:description" content="This is my personal portfolio, where I show my projects and skills as a web developer." />
     <meta property="og:image" content="https://starkiller-portfolio.vercel.app/dead_star.png" />
+    <meta property="og:site_name" content="S74RK1113R portafolio" />
     <meta property="og:url" content="https://starkiller-portfolio.vercel.app/" />
     <meta property="og:type" content="website" />
     <meta name="site_name" content="Portafolio web" />
