add robots meta tag

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta property="og:type" content="website" />
     <meta name="site_name" content="S74RK1113R portafolio" />
     <meta name="author" content="S74RK1113R" />
+    <meta name="robots" content="index,follow" />
     
 
     <title>S74RK1113R portfolio</title>
