--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <meta name="site_name" content="S74RK1113R portafolio" />
     <meta name="author" content="S74RK1113R" />
     <meta name="robots" content="index,follow" />
+    <meta name="keywords" content="portfolio, web developer, projects, skills, S74RK1113R, starkiller, react, javascript, css, html, frontend, developer" />
+    <link rel="icon" href="https://starkiller-portfolio.vercel.app/dead_star_32x32.png" sizes="32x32" >
+    <link rel="icon" href="https://starkiller-portfolio.vercel.app/dead_star_48x48.png" sizes="48x48" >
+    <link rel="icon" href="https://starkiller-portfolio.vercel.app/dead_star_96x96.png" sizes="96x96" >
+    <link rel="icon" href="https://starkiller-portfolio.vercel.app/dead_star_144x144.png" sizes="144x144" >
+    <link rel="shortcut icon" href="https://starkiller-portfolio.vercel.app/deadIcon.ico" type="image/x-icon">
     
 
     <title>S74RK1113R portfolio</title>
