--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="/dead_star.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="This is my personal portfolio, where I show my projects and skills as a web developer." />
+    <meta name="application-name" content="S74RK1113R portfolio" />
     <meta name="google-site-verification" content="ZIhuYHvHwk_6fpzlWMELen0SRbhyeaTHx4CdEUWh98Q" />
     <link rel="canonical" href="https://starkiller-portfolio.vercel.app/" />
-    <meta property="og:title" content="S74RK1113R portafolio" />
+    <meta property="og:title" content="S74RK1113R portfolio" />
     <meta property="og:description" content="This is my personal portfolio, where I show my projects and skills as a web developer." />
     <meta property="og:image" content="https://starkiller-portfolio.vercel.app/dead_star.png" />
-    <meta property="og:site_name" content="S74RK1113R portafolio" />
+    <meta property="og:site_name" content="S74RK1113R portfolio" />
     <meta property="og:url" content="https://starkiller-portfolio.vercel.app/" />
     <meta property="og:type" content="website" />
-    <meta name="site_name" content="S74RK1113R portafolio" />
+    <meta name="site_name" content="S74RK1113R portfolio" />
     <meta name="author" content="S74RK1113R" />
     <meta name="robots" content="index,follow" />
     <meta name="keywords" content="portfolio, web developer, projects, skills, S74RK1113R, starkiller, react, javascript, css, html, frontend, developer" />
